--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -164,6 +164,7 @@
                         <h4>
                             Message:
                             <b> {{note.message}} </b>
+                            <!-- You can view your uploads on the <a href="management#/site/tasks" >Workflow Task page</a>. -->
                         </h4>
                     </div>
                 </div> <!-- End task finished upload notification -->
