--- a/uasdm-web/src/main/ng2/src/styles/main.css
+++ b/uasdm-web/src/main/ng2/src/styles/main.css
@@ -18,7 +18,7 @@ html, body{height:100%;}
 body{
 	/* min-width:1030px; */
     overflow: hidden;
-    background: white;
+    background: #f7f7f7;
 }
 
 .new-admin-design-main {
@@ -2775,6 +2775,12 @@ input.form-control:active,
     outline: 0;
     /* -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(107, 165, 66,.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(107, 165, 66,.6); */
+}
+
+input[type="file"]:focus, 
+input[type="radio"]:focus, 
+input[type="checkbox"]:focus{
+	outline: none;
 }
 
 input.ghost-input,
