--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
@@ -64,10 +64,13 @@
   <div class="row" style="margin-bottom: 40px;">
     <div class="col-sm-1"></div>
     <div class="col-sm-10">
-      <h3>Uploads</h3>
+      <h3>Processing Jobs</h3>
 
       <ul class="nav nav-tabs" role="tablist">
         <li class="active">
+          <a role="tab" data-toggle="tab" (click)="onTabClick($event, 'all')">All</a>
+        </li>
+        <li>
           <a role="tab" data-toggle="tab" (click)="onTabClick($event, 'action-required')">Action Required</a>
         </li>
         <li>
@@ -80,7 +83,7 @@
         <div *ngIf="activeTab === 'action-required'" class="tab-pane active" id="action-required">
           
           <div class="panel-group">
-            <div *ngFor="let taskGroup of taskGroups; let idx=index" class="panel panel-default" style="background: none;border: none;">
+            <div *ngFor="let taskGroup of collectionGroups | paginate: { itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
             
                 <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
                   <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
@@ -119,16 +122,100 @@
                   </div>
                 </div>
             </div>
+
+             <pagination-controls (pageChange)="onPageChange($event, [])"></pagination-controls>
           </div>
         </div>
 
         <div *ngIf="activeTab === 'success'" class="tab-pane active" id="success">
           <div class="panel-group">
+            <div *ngFor="let taskGroup of collectionGroups | paginate: { itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
+            
+                <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
+                  <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
+                    <a data-toggle="collapse" (click)="taskGroup.visible = !taskGroup.visible" [attr.aria-expanded]="!taskGroup.visible"
+                      [attr.aria-controls]="'taskGroup'+ idx">
+                      <h4>{{taskGroup.label}}</h4>
+                    </a>
+                  </h4>
+                  
+                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete','pending':taskGroup.status === 'Queued','fail':taskGroup.status === 'Failed'}" ></span>
+
+                  <button class="btn btn-default pull-right" (click)="handleGoto(taskGroup.collectionId)">View Collection</button>
+
+                </div>
+            
+                <div class="panel-body" [isAnimated]="false" [collapse]="!taskGroup.visible">
+                  <div *ngFor="let taskGroupType of taskGroup.groups; let grpi=index">
+                    <div [id]="'task'+ grpi">
+
+                      <!-- Upload Tasks -->
+                      <div *ngIf="taskGroupType.type === 'UPLOAD'">
+                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Upload'" ></tasks-panel>
+                      </div>
+
+                      <!-- Process Tasks -->
+                      <div *ngIf="taskGroupType.type === 'PROCESS'">
+                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Process'" ></tasks-panel>
+                      </div>
+
+                      <!-- Store Tasks -->
+                      <div *ngIf="taskGroupType.type === 'STORE'">
+                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Store'" ></tasks-panel>
+                      </div>
+                
+                    </div>
+                  </div>
+                </div>
+            </div>
+
+             <pagination-controls (pageChange)="onPageChange($event, [])"></pagination-controls>
           </div>
         </div>
 
         <div *ngIf="activeTab === 'all'" class="tab-pane active" id="all">
           <div class="panel-group">
+            <div *ngFor="let taskGroup of collectionGroups | paginate: { itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
+            
+                <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
+                  <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
+                    <a data-toggle="collapse" (click)="taskGroup.visible = !taskGroup.visible" [attr.aria-expanded]="!taskGroup.visible"
+                      [attr.aria-controls]="'taskGroup'+ idx">
+                      <h4>{{taskGroup.label}}</h4>
+                    </a>
+                  </h4>
+                  
+                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete','pending':taskGroup.status === 'Queued','fail':taskGroup.status === 'Failed'}" ></span>
+
+                  <button class="btn btn-default pull-right" (click)="handleGoto(taskGroup.collectionId)">View Collection</button>
+
+                </div>
+            
+                <div class="panel-body" [isAnimated]="false" [collapse]="!taskGroup.visible">
+                  <div *ngFor="let taskGroupType of taskGroup.groups; let grpi=index">
+                    <div [id]="'task'+ grpi">
+
+                      <!-- Upload Tasks -->
+                      <div *ngIf="taskGroupType.type === 'UPLOAD'">
+                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Upload'" ></tasks-panel>
+                      </div>
+
+                      <!-- Process Tasks -->
+                      <div *ngIf="taskGroupType.type === 'PROCESS'">
+                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Process'" ></tasks-panel>
+                      </div>
+
+                      <!-- Store Tasks -->
+                      <div *ngIf="taskGroupType.type === 'STORE'">
+                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Store'" ></tasks-panel>
+                      </div>
+                
+                    </div>
+                  </div>
+                </div>
+            </div>
+
+            <pagination-controls (pageChange)="onPageChange($event, [])"></pagination-controls>
           </div>
         </div>
 
