Only show the add metadata button when there is no metadata

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -125,8 +125,9 @@
         <div class="btn-holder" style="margin: 20px 20px 10px 20px;">
           <div class="row">
             <div class="col-sm-2">
-              <button type="button" class="btn btn-warning" [disabled]="processRunning" (click)="handleSetMetadata()">
-                Set metadata
+              <button *ngIf="!entity.metadataUploaded" type="button" class="btn btn-warning" [disabled]="processRunning" (click)="handleSetMetadata()">
+                <i class="fa fa-plus" style="color:white"></i>
+                Add metadata
               </button>            
             </div>            
             <div class="col-md-10" style="text-align: right;">
