--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -14,7 +14,7 @@
     <div *ngIf="entity != null">
       <div class="row">
         <div class="col-md-12">
-          <h2>{{entity.name}}</h2>
+          <h2>{{entity.name}} <span *ngIf="!entity.metadataUploaded" class="dot pending" style="margin-left: 0;margin-bottom: 5px;"></span></h2>
         </div>
       </div>
 
@@ -40,7 +40,7 @@
 	                  <a class="thumbnail non-clickable">
 	                    <img [src]="context + '/net/geoprism/images/thumbnail-default.png'" alt="Image">
 	                    <div class="caption">
-	                      <h4 class="media-heading">{{item.name}}</h4>
+	                      <h4 class="media-heading">{{item.name}} <h2>{{entity.name}} <span *ngIf="!entity.metadataUploaded && folder.name === 'raw'" class="dot pending" style="margin-left: 0;margin-bottom: 5px;"></span></h2></h4>
 	                    </div>
 	                  </a>
 	                </li>
