--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
@@ -36,10 +36,10 @@
                       </ul>
                     </div>
                   </div>
-                  <div class="col-sm-3" style="text-align: left;">
+                  <div class="col-sm-3" style="text-align: right;">
                     <div>
-                      <button style="width:45%" class="btn btn-default" (click)="handleGoto(message.collectionId)">View Collection</button>
-                      <button style="width:45%;margin-left: 10px;" class="btn btn-primary" (click)="handleMessage(message)">Add Metadata</button>
+                      <button style="width:47%" class="btn btn-default" (click)="handleGoto(message.collectionId)">View Collection</button>
+                      <button style="width:47%;margin-left: 10px;" class="btn btn-primary" (click)="handleMessage(message)">Add Metadata</button>
                     </div>
                   </div>
                 </div>
