--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -563,6 +563,42 @@ input[type="checkbox"].x-box:checked:after {
 
 
 
+.dot {
+  height: 20px;
+  width: 20px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+.dot.success {
+  background-color: green;
+}
+.dot.pending {
+  background-color: orange;
+}
+.dot.pending.blink {
+   animation-duration: 400ms;
+   animation-name: blink;
+   animation-iteration-count: infinite;
+   animation-direction: alternate;
+}
+@keyframes blink {
+   from {
+      opacity: 1;
+   }
+   to {
+      opacity: .5;
+   }
+ }
+.dot.fail {
+  background-color: red;
+}
+
+
+
 .ngx-pagination {
   padding: 10px 0;
     background: transparent;
