--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
@@ -88,7 +88,7 @@
                     </a>
                   </h4>
                   
-                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete','pending':taskGroup.status === 'Queued','fail':taskGroup.status === 'Failed'}" ></span>
+                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete', 'pending blink':taskGroup.status === 'Processing' || taskGroup.status === 'Running' || taskGroup.status === 'Pending' || taskGroup.status === 'Queued','fail':taskGroup.status === 'Failed'}" ></span>
 
                   <button class="btn btn-default pull-right" (click)="handleGoto(taskGroup.collectionId)">View Collection</button>
 
@@ -118,7 +118,7 @@
                 </div>
             </div>
 
-             <pagination-controls (pageChange)="onPageChange($event, [])"></pagination-controls>
+             <pagination-controls (pageChange)="onPageChange($event, ['Failed'])"></pagination-controls>
           </div>
         </div>
 
@@ -134,7 +134,7 @@
                     </a>
                   </h4>
                   
-                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete','pending':taskGroup.status === 'Queued','fail':taskGroup.status === 'Failed'}" ></span>
+                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete', 'pending blink':taskGroup.status === 'Processing' || taskGroup.status === 'Running' || taskGroup.status === 'Pending' || taskGroup.status === 'Queued', 'fail':taskGroup.status === 'Failed'}" ></span>
 
                   <button class="btn btn-default pull-right" (click)="handleGoto(taskGroup.collectionId)">View Collection</button>
 
@@ -164,7 +164,7 @@
                 </div>
             </div>
 
-             <pagination-controls (pageChange)="onPageChange($event, [])"></pagination-controls>
+             <pagination-controls (pageChange)="onPageChange($event, ['Complete'])"></pagination-controls>
           </div>
         </div>
 
@@ -180,7 +180,7 @@
                     </a>
                   </h4>
                   
-                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete','pending':taskGroup.status === 'Queued','fail':taskGroup.status === 'Failed'}" ></span>
+                  <span class="dot" [ngClass]="{'success':taskGroup.status === 'Complete', 'pending blink':taskGroup.status === 'Processing' || taskGroup.status === 'Running' || taskGroup.status === 'Pending' || taskGroup.status === 'Queued', 'fail':taskGroup.status === 'Failed'}" ></span>
 
                   <button class="btn btn-default pull-right" (click)="handleGoto(taskGroup.collectionId)">View Collection</button>
 
