--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -30,53 +30,56 @@
 
       <div class="row">
         <div class="col-sm-12" style="padding: 0;">
-        <tabset class="nav-full-width">
-          <tab *ngFor="let folder of folders" [heading]="folder.name" (selectTab)="onSelect(folder)">
-          
-            <div [ngSwitch]="folder.name">
+          <tabset class="nav-full-width">
+            <tab *ngFor="let folder of folders" [heading]="folder.name" (selectTab)="onSelect(folder)">
+
+              <div [ngSwitch]="folder.name">
                 <div class="image-list-container" *ngSwitchDefault>
                   <ul class="list-group row">
-	                <li *ngFor="let item of page.results" class="list-group-item col-xs-3">
-	                  <a class="thumbnail non-clickable">
-	                    <img [src]="context + '/net/geoprism/images/thumbnail-default.png'" alt="Image">
-	                    <div class="caption">
-	                      <h4 class="media-heading">{{item.name}} <h2>{{entity.name}} <span *ngIf="!entity.metadataUploaded && folder.name === 'raw'" class="dot pending" style="margin-left: 0;margin-bottom: 5px;"></span></h2></h4>
-	                    </div>
-	                  </a>
-	                </li>
+                    <li *ngFor="let item of page.results" class="list-group-item col-xs-3">
+                      <a class="thumbnail non-clickable">
+                        <img [src]="context + '/net/geoprism/images/thumbnail-default.png'" alt="Image">
+                        <div class="caption">
+                          <h4 class="media-heading">{{item.name}}</h4>
+                        </div>
+                      </a>
+                    </li>
                   </ul>
                 </div>
-                
+
                 <div class="image-list-container" *ngSwitchCase="'raw'">
                   <ul class="list-group row">
-	                <li *ngFor="let item of page.results | paginate: { itemsPerPage: page.pageSize, currentPage: page.pageNumber, totalItems: page.count }" class="list-group-item col-xs-3">
-	                  <a class="thumbnail"
-	                    [ngClass]="{'card-disabled' : item.excludeFromProcess, 'non-clickable' : !enableSelectableImages}">
-	                    <input type="checkbox" class="x-box" *ngIf="enableSelectableImages"
-	                      [checked]="item.excludeFromProcess" (change)="toggleExcludeImage($event, item)" />
-	                    <img (click)="enableSelectableImages ? toggleExcludeImage($event, item) : false"
-	                      [ngClass]="{'img-disabled' : item.excludeFromProcess}" 
+                    <li
+                      *ngFor="let item of page.results | paginate: { itemsPerPage: page.pageSize, currentPage: page.pageNumber, totalItems: page.count }"
+                      class="list-group-item col-xs-3">
+                      <a class="thumbnail"
+                        [ngClass]="{'card-disabled' : item.excludeFromProcess, 'non-clickable' : !enableSelectableImages}">
+                        <input type="checkbox" class="x-box" *ngIf="enableSelectableImages"
+                          [checked]="item.excludeFromProcess" (change)="toggleExcludeImage($event, item)" />
+                        <img (click)="enableSelectableImages ? toggleExcludeImage($event, item) : false"
+                          [ngClass]="{'img-disabled' : item.excludeFromProcess}"
                           [src]="thumbnails[item.key] != null ? (thumbnails[item.key] | safeHtml) : (context + '/net/geoprism/images/thumbnail-default.png')"
-	                      alt="Image">
-	                    <div class="caption">
-	                      <h4 class="media-heading">
+                          alt="Image">
+                        <div class="caption">
+                          <h4 class="media-heading">
                             {{item.name}}
                           </h4>
-	                    </div>
-	                  </a>
-	                </li>
+                        </div>
+                      </a>
+                    </li>
                   </ul>
-                </div>                
-                
+                </div>
+
                 <div *ngSwitchCase="'video'">
                   <div *ngIf="video.src !== null">
                     <div class="row">
                       <div class="col-md-1"></div>
                       <div class="col-md-10">
                         <h3>
-                          {{video.name}} 
+                          {{video.name}}
                           <a (click)="handleDownloadVideo(video.src)"><i class="fas fa-download"></i></a>
-                          <a class="pull-right" (click)="closeVideo()"><i class="fa fa-times" aria-hidden="true"></i></a>
+                          <a class="pull-right" (click)="closeVideo()"><i class="fa fa-times"
+                              aria-hidden="true"></i></a>
                         </h3>
                       </div>
                       <div class="col-md-1"></div>
@@ -87,65 +90,69 @@
                         <video style="width:100%" controls>
                           <source [src]="video.src" type="video/mp4" />
                           Browser not supported
-                        </video>                      
+                        </video>
                       </div>
                       <div class="col-md-1"></div>
                     </div>
                   </div>
-                  
-                  <div class="image-list-container">              
+
+                  <div class="image-list-container">
                     <ul class="list-group row">
-	                  <li *ngFor="let item of page.results" class="list-group-item col-xs-3">
-	                    <a class="thumbnail" (click)="showVideo(item)">
-	                      <img [src]="context + '/net/geoprism/images/thumbnail-video.png'" alt="Video">
-	                      <div class="caption">
-	                        <h4 class="media-heading">{{item.name}}</h4>
-	                      </div>
-	                    </a>
-	                  </li>
+                      <li *ngFor="let item of page.results" class="list-group-item col-xs-3">
+                        <a class="thumbnail" (click)="showVideo(item)">
+                          <img [src]="context + '/net/geoprism/images/thumbnail-video.png'" alt="Video">
+                          <div class="caption">
+                            <h4 class="media-heading">{{item.name}}</h4>
+                          </div>
+                        </a>
+                      </li>
                     </ul>
                   </div>
-                </div>                
+                </div>
 
-            </div>
-          </tab>
-        </tabset>
+              </div>
+            </tab>
+          </tabset>
         </div>
       </div>
-      
+
       <div class="row">
-      <div class="col-sm-12">
-      	<pagination-controls *ngIf="folder.name === 'raw'" (pageChange)="onPageChange($event)"></pagination-controls>
+        <div class="col-sm-12">
+          <pagination-controls *ngIf="folder.name === 'raw'" (pageChange)="onPageChange($event)"></pagination-controls>
 
-        <div *ngIf="processRunning" style="text-align:right;padding-right:20px;">
-          <p>{{statusMessage}}</p>
-          <p>See this process on
-            <a routerlink="/site/tasks" routerlinkactive="active" href="#/site/tasks">your tasks page</a>
-          </p>
-        </div>
+          <div *ngIf="processRunning" style="text-align:right;padding-right:20px;">
+            <p>{{statusMessage}}</p>
+            <p>See this process on
+              <a routerlink="/site/tasks" routerlinkactive="active" href="#/site/tasks">your tasks page</a>
+            </p>
+          </div>
 
-        <div class="btn-holder" style="margin: 20px 20px 10px 20px;">
-          <div class="row">
-            <div class="col-sm-2">
-              <button *ngIf="!entity.metadataUploaded" type="button" class="btn btn-warning" [disabled]="processRunning" (click)="handleSetMetadata()">
-                <i class="fa fa-plus" style="color:white"></i>
-                Add metadata
-              </button>            
-            </div>            
-            <div class="col-md-10" style="text-align: right;">
-              <button type="button" class="btn btn-default" [disabled]="processRunning" (click)="bsModalRef.hide()">Close</button>
-              <button *ngIf="processable" type="button" class="btn btn-secondary" [disabled]="processRunning" (click)="handleDownload()" style="margin-left: 5px;">
-                Download all
-              </button>
-              <button *ngIf="processable && enableSelectableImages" [disabled]="processRunning" (click)="handleRunOrtho()"
-                class="btn btn-primary" style="margin-left: 5px;"> 
+          <div class="btn-holder" style="margin: 20px 20px 10px 20px;">
+            <div class="row">
+              <div class="col-sm-2">
+                <button *ngIf="!entity.metadataUploaded" type="button" class="btn btn-warning"
+                  [disabled]="processRunning" (click)="handleSetMetadata()">
+                  <i class="fa fa-plus" style="color:white"></i>
+                  Add metadata
+                </button>
+              </div>
+              <div class="col-md-10" style="text-align: right;">
+                <button type="button" class="btn btn-default" [disabled]="processRunning"
+                  (click)="bsModalRef.hide()">Close</button>
+                <button *ngIf="processable" type="button" class="btn btn-secondary" [disabled]="processRunning"
+                  (click)="handleDownload()" style="margin-left: 5px;">
+                  Download all
+                </button>
+                <button *ngIf="processable && enableSelectableImages" [disabled]="processRunning"
+                  (click)="handleRunOrtho()" class="btn btn-primary" style="margin-left: 5px;">
                   Reprocess imagery
-                  <i class="fa fa-sync-alt" [ngClass]="{'fa-spin' : processRunning}" aria-hidden="true" style="color:white;vertical-align: middle;margin-left: 10px;"></i>
-              </button>
+                  <i class="fa fa-sync-alt" [ngClass]="{'fa-spin' : processRunning}" aria-hidden="true"
+                    style="color:white;vertical-align: middle;margin-left: 10px;"></i>
+                </button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
       </div>
     </div>
   </div>
