--- a/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
@@ -13,7 +13,7 @@
         <li dropdown>
           <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle>
             <span class="glyphicon glyphicon-menu-hamburger">
-              <span *ngIf="notificationCount > 0" class="task-badge">{{notificationCount}}</span>
+              <span *ngIf="notificationCount > 0" class="task-badge" [ngClass]="{'double-digit': notificationCount > 9}">{{notificationCount}}</span>
             </span>
           </a>
 
