--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
@@ -7,7 +7,7 @@
     <div class="col-sm-10">
       <div id="tasks">
 
-        <div *ngIf="messages && messages.length > 0">
+        <div *ngIf="messages && messages.count > 0">
           <h2>Tasks</h2>
 
           <div id="tasks-container">
@@ -15,7 +15,7 @@
               <h3 class="col-sm-9">Issue</h3>
               <h3 class="col-sm-3">Actions</h3>
             </div>
-            <div class="panel panel-default" *ngFor="let message of messages">
+            <div class="panel panel-default" *ngFor="let message of messages.resultSet | paginate: {id: 'message-pg-ctrl', itemsPerPage: messages.pageSize, currentPage: messages.pageNumber, totalItems: messages.count }">
               <!-- <div class="panel-heading">Panel heading without title</div> -->
           
               <div class="panel-body">
@@ -45,6 +45,9 @@
                 </div>
               </div>
           
+            </div>
+            <div class="row">
+              <pagination-controls id="message-pg-ctrl" (pageChange)="onMessagePageChange($event)"></pagination-controls>                  
             </div>
           </div>
           
@@ -78,7 +81,7 @@
         <div *ngIf="activeTab === 'action-required'" class="tab-pane active" id="action-required">
           
           <div class="panel-group">
-            <div *ngFor="let taskGroup of collectionGroups | paginate: { itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
+            <div *ngFor="let taskGroup of collectionGroups | paginate: { id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
             
                 <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
                   <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
@@ -118,13 +121,13 @@
                 </div>
             </div>
 
-             <pagination-controls (pageChange)="onPageChange($event, [])"></pagination-controls>
+             <pagination-controls id="tasks-pg-ctrl" (pageChange)="onPageChange($event, [])"></pagination-controls>
           </div>
         </div>
 
         <div *ngIf="activeTab === 'success'" class="tab-pane active" id="success">
           <div class="panel-group">
-            <div *ngFor="let taskGroup of collectionGroups | paginate: { itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
+            <div *ngFor="let taskGroup of collectionGroups | paginate: {id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
             
                 <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
                   <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
@@ -164,13 +167,13 @@
                 </div>
             </div>
 
-             <pagination-controls (pageChange)="onPageChange($event, [])"></pagination-controls>
+             <pagination-controls id="tasks-pg-ctrl" (pageChange)="onPageChange($event, [])"></pagination-controls>
           </div>
         </div>
 
         <div *ngIf="activeTab === 'all'" class="tab-pane active" id="all">
           <div class="panel-group">
-            <div *ngFor="let taskGroup of collectionGroups | paginate: { itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
+            <div *ngFor="let taskGroup of collectionGroups | paginate: {id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
             
                 <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
                   <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
@@ -210,7 +213,7 @@
                 </div>
             </div>
 
-            <pagination-controls (pageChange)="onPageChange($event, [])"></pagination-controls>
+            <pagination-controls id="tasks-pg-ctrl" (pageChange)="onPageChange($event, [])"></pagination-controls>
           </div>
         </div>
 
