Updated tasks polling request

--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
@@ -121,7 +121,7 @@
                 </div>
             </div>
 
-             <pagination-controls id="tasks-pg-ctrl" (pageChange)="onPageChange($event, ['Failed'])"></pagination-controls>
+             <pagination-controls id="tasks-pg-ctrl" (pageChange)="onPageChange($event)"></pagination-controls>
           </div>
         </div>
 
@@ -167,7 +167,7 @@
                 </div>
             </div>
 
-             <pagination-controls id="tasks-pg-ctrl" (pageChange)="onPageChange($event, ['Complete'])"></pagination-controls>
+             <pagination-controls id="tasks-pg-ctrl" (pageChange)="onPageChange($event)"></pagination-controls>
           </div>
         </div>
 
@@ -213,7 +213,7 @@
                 </div>
             </div>
 
-            <pagination-controls id="tasks-pg-ctrl" (pageChange)="onPageChange($event, [])"></pagination-controls>
+            <pagination-controls id="tasks-pg-ctrl" (pageChange)="onPageChange($event)"></pagination-controls>
           </div>
         </div>
 
