--- a/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
@@ -8,7 +8,7 @@
         </h2>
 
         <ul>
-            <li>IDM Plaform Version: 0.8 (Beta)</li>
+            <li>IDM Platform Version: <span id="automated-version-replace">0.8</span> (Beta)</li>
             <li>Open Drone Map (ODM): v0.9.1</li>
         </ul>
         
