more visible reset password link

--- a/uasdm-web/src/main/ng2/src/app/core/component/login/login.component.html
+++ b/uasdm-web/src/main/ng2/src/app/core/component/login/login.component.html
@@ -34,7 +34,7 @@
                                             [placeholder]="'login.username' | localize" id="login" required />
                                         <input [(ngModel)]="password" name="password" type="password"
                                             [placeholder]="'login.password' | localize" id="password" required />
-                                        <a routerLink="/forgotpassword" class="forgot-password">
+                                        <a style="color:black;" routerLink="/forgotpassword" class="forgot-password">
                                             <localize key="login.forgotPassword"></localize>
                                         </a>
                                     </div>
