Banner notification for upload success and complete

--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -188,6 +188,22 @@
         </div>
         <div class="col-md-9" id="site-explorer-map">
             <div class="row">
+                <article style="position: absolute;z-index: 5;margin-left: 100px;margin-top: 10px;">
+                  <div *ngFor="let task of tasks; let idx = index">
+                    <alert *ngIf="task.status === 'Complete' && task.actions.length === 0" type="success" [dismissible]="true" (onClosed)="handleCloseToast(idx)">
+                      <strong>Upload {{task.status}}</strong> for {{task.collectionLabel}}. <a (click)="handleViewSite(task.collection)">Goto the collection view</a>
+                    </alert>
+                    <alert *ngIf="task.status === 'Complete' && task.actions.length !== 0" type="warning" [dismissible]="true" (onClosed)="handleCloseToast(idx)">
+                      <strong>Upload {{task.status}}</strong> for {{task.collectionLabel}}. Task completed with warnings.  See the <a routerLink="/site/tasks">task page</a> for more details.
+                    </alert>
+                    <alert *ngIf="task.status === 'Error'" type="danger" [dismissible]="true" (onClosed)="handleCloseToast(idx)">
+                      <strong>Upload {{task.status}}</strong> for {{task.collectionLabel}}. Task completed with errors.  See the <a routerLink="/site/tasks">task page</a> for more details.
+                    </alert>
+                    <alert *ngIf="task.status !== 'Error' && task.status !== 'Complete'" type="info" [dismissible]="true" (onClosed)="handleCloseToast(idx)">
+                      <strong>Upload {{task.status}}</strong> for {{task.collectionLabel}}.
+                    </alert>
+                  </div>                  
+                </article>
 
                 <article class="base-layer-panel">
 
